terraform-k8s/chatapp-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
  labels:
    app: server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: dejan1998/socketio-chat-app-server
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: server
  name: server-service
spec:
  type: ClusterIP
  selector:
    app: server
  ports:
  - port: 4000
    protocol: TCP
    targetPort: 4000
